app/ui/static/css/modules/magic.css
.magic {
  text-align: center;
}

.mg-item {
  display: inline-block;
  vertical-align: top;
  margin-right: 1em;

  list-style: none;
  text-align: center;
}

.mg-name {
  font-size: 22px;
  text-transform: lowercase;
}

.mg-button {
  position: relative;
  display: inline-block;
  width: 145px;
  height: 145px;
}

.mg-label {
  position: absolute;
  top: 50%;
  left: 0;
  right: 0;

  font-size: 26px;
}

.avoider .mg-label > span {
  display: block;
  margin-top: -15px;
  line-height: 30px;
  color: #e68724;
}

.mg-icon {
  display: inline-block;
  width: 50px;
  height: 50px;
  margin-top: -25px;
}

.avoider .mg-icon {
  background: transparent url('../../img/avoid.svg') no-repeat;
}

.announcer .mg-icon {
  background: transparent url('../../img/announcer.svg') no-repeat;
}

/*
  Defaults for buttons with no specific type
*/
/* Default inactive circle */
.button-circle {
  fill: #333333;
}

/* Default active circle background */
.is-active .button-circle {
  fill: #bcbbbb;
}

/* Default progress bar overlay */
.button-progress {
  fill: #222222;
}

/*
  Avoider-specific
*/
.avoider.is-inactive .button-circle,
.avoider .button-progress {
  fill: #e68724;
}

/*

*/
.announcer.is-inactive .button-circle,
.announcer .button-progress {
  fill: #6dbe45;
}

